# Beat_The_Beat

./: Actor.cpp  Actor.h  Beat.cpp  Beat.h  BeatStream.cpp  BeatStream.h  CMakeCache.txt  CMakeLists.txt  Conductor.cpp  Conductor.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputFlags.cpp  InputFlags.h  Inputs.cpp  Inputs.h  MagicView.cpp  MagicView.h  Main.cpp  Makefile  Note.cpp  Note.h  NoteTextEvent.cpp  NoteTextEvent.h  Resources.cpp  Resources.h  Scene.cpp  Scene.h  Stave.cpp  Stave.h  Utils.h  cmake_install.cmake
actors/: Ballos1Actor.cpp  Ballos1Actor.h  Quote1Actor.cpp  Quote1Actor.h
entities/: Box.cpp  Box.h  Particle.cpp  Particle.h  Quote.cpp  Quote.h
inc/: AnimatedSprite.h  Animation.h  Conductor.h  Game.h  GameObject.h  InputManager.h  JoystickInputManager.h  KeyboardInputManager.h  MagicView.h  MenuScene.h  Note.h  Particle.h  Player.h  Quote.h  Resources.h  Scene.h  Stave.h  StaveParser.h  TestScene.h  TextParticle.h  utils.h
res/: stave0.in
src/: AnimatedSprite.cpp  Animation.cpp  Conductor.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  JoystickInputManager.cpp  KeyboardInputManager.cpp  MenuScene.cpp  Note.cpp  Player.cpp  Quote.cpp  Resources.cpp  Scene.cpp  Stave.cpp  StaveParser.cpp  TestScene.cpp  TextParticle.cpp  main.cpp
